[tool.poetry]
name = "gmaps-crawler"
version = "0.1.0"
description = "Google Maps crawler using Selenium"
authors = ["Guilherme Latrova <hello@guilatrova.dev>"]
license = "GPLv3"
packages = [
    { include = "gmaps_crawler", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
webdriver-manager = "^3.5.2"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
pytest = "^6.2.5"
rich = "^10.14.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
extra_standard_library = ["pytest", "toml", "click"]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
